ecmascript/parser/tests/typescript-errors/tsc/expressions/propertyAccess/propertyAccessNumericLiterals/input.ts.stderr
error: Legacy octal literals are not available when targeting ECMAScript 5 and higher
 --> $DIR/tests/typescript-errors/tsc/expressions/propertyAccess/propertyAccessNumericLiterals/input.ts:7:1
  |
7 | 000.toString();
  | ^^^

error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/expressions/propertyAccess/propertyAccessNumericLiterals/input.ts:7:1
  |
7 | 000.toString();
  | ^^^

